--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -15,6 +15,10 @@
     a {
       color: $color-3;
     }
+
+    ul {
+        list-style: none;
+    }
   }
 
   label {
@@ -27,8 +31,10 @@
     border-radius: 4px;
     margin-left: 5px;
   }
-  
+
   .submit-btn {
     @include button-theme($white, $color-3, darken($color-3, 5));
   }
+
+
 }
