--- a/app/assets/stylesheets/layout/page.scss
+++ b/app/assets/stylesheets/layout/page.scss
@@ -2,3 +2,12 @@
   padding-left: 0;
   padding-right: 0;
 }
+
+.inner {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+h1, h2, h3 {
+  color: $white;
+}
