--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -7,6 +7,10 @@
   background-color: $color-1;
   border-bottom: 1px solid $color-2;
 
+  h1, h2, h3 {
+    color: $white;
+  }
+
   li > a {
     color: $white;
 
