move filter form out of matchindex component, improve refresh issue after profile update

--- a/app/assets/stylesheets/base/global_variables.scss
+++ b/app/assets/stylesheets/base/global_variables.scss
@@ -6,6 +6,17 @@ $color-3: #00d280;
 $white: #fff;
 $black: #000;
 
+$background-2: #f3f5f9;
+
+$font-color: #5e6573;
+
+//padding
+$component-padding: 30px;
+$padding-from-nav: 100px;
+
+//border-radius
+$border-radius-sm: 5px;
+
 //font
 
 
