--- a/app/assets/stylesheets/components/index_item.scss
+++ b/app/assets/stylesheets/components/index_item.scss
@@ -18,6 +18,7 @@
   padding: $component-padding/2;
 
   .index-description {
-    display: block;
+    max-height: 40px;
+    overflow: hidden;
   }
 }
