cant render profile stuff that doesnt exist in state yet -- thanks Jim I was being dumb

--- a/app/assets/stylesheets/layout/profile.scss
+++ b/app/assets/stylesheets/layout/profile.scss
@@ -83,7 +83,7 @@
 }
 
 .profile-sidebox {
-  background-color: $background-2;
+  background-color: $white;
   padding: $component-padding;
   border-radius: $border-radius-sm;
 }
