question forms are functional from ui

--- a/app/assets/stylesheets/components/profile_form.scss
+++ b/app/assets/stylesheets/components/profile_form.scss
@@ -32,6 +32,8 @@
   textarea{
     outline: none;
     width: 100%;
+    min-height: 230px;
+    max-width: 450px;
     color: $font-color;
     border-color: $font-color;
     padding: 10px;
