--- a/app/assets/stylesheets/base/global_variables.scss
+++ b/app/assets/stylesheets/base/global_variables.scss
@@ -15,6 +15,8 @@ $font-color: #5e6573;
 $component-padding: 30px;
 $padding-from-nav: 100px;
 
+$container-width: 900px;
+
 //border-radius
 $border-radius-sm: 5px;
 
